completed generate datasets

--- a/configs/data_configs/digital_data.yaml
+++ b/configs/data_configs/digital_data.yaml
@@ -1,5 +1,5 @@
 parameters:
-  user_full_name: "maximelabonne"
+  user_full_name: "Maxime Labonne"
   links:
 
         # Medium (only articles that are not under the paid wall work)
