--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
   "rich>=13.7.10",
   "numpy>=1.26.4",
   "datasets>=3.0.1",
-  "torch==2.2.2",
+  "torch>=2.4.0",
   "selenium>=4.21.0",
   "webdriver-manager>=4.0.1",
   "beautifulsoup4>=4.12.3",
@@ -29,5 +29,12 @@ dependencies = [
   "langchain-community>=0.2.11",
   "fastapi>=0.100",
   "uvicorn>=0.30.6",
-  "opik>=0.2.2"
+  "opik>=0.2.2", 
+  "accelerate>=0.33.0",
+  "peft>=0.12.0",
+  "trl>=0.9.6",
+  "comet-ml>=3.44.3",
 ]
+[tool.setuptools]
+packages = ["llm_mimic", "steps", "configs", "services", "pipelines", "data_models", "run_scripts"]
+package-dir = {"" = "."}
